# roccat-vulcan-api-rs

./: Cargo.toml  LICENSE  README.md  crates.js  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: coverage.yml  fmt.yml  rust.yml  rust_beta.yml  rust_doc.yml  rust_doc_check.yml
benches/: bench.rs
better_swarm/: Cargo.toml
examples/: keypress_color_change.rs  render_loop.rs
implementors/roccat_vulcan_api_rs/: trait.Layout.js
roccat_vulcan_api_rs/: all.html  constant.NUMBER_KEY_LED_BUFFER.html  enum.ErrorRoccatVulcanApi.html  enum.KeyName.html  index.html  sidebar-items.js  struct.ColorBuffer.html  struct.ColorRgb.html  struct.ColorRgba.html  struct.HidInterfaceFilter.html  struct.Hue.html  struct.KeyCode.html  struct.KeyInfo.html  struct.KeyLight.html  struct.KeyPress.html  struct.KeyboardApi.html  struct.KeyboardIntrefacesFilter.html  struct.LayoutFrCh.html  struct.Position.html  struct.Saturation.html  trait.Layout.html  type.Value.html
roccat_vulcan_api_rs/error/: enum.ErrorRoccatVulcanApi.html
roccat_vulcan_api_rs/interface/: struct.HidInterfaceFilter.html  struct.KeyboardIntrefacesFilter.html
roccat_vulcan_api_rs/keyboard/: struct.KeyboardApi.html
roccat_vulcan_api_rs/layout/: struct.KeyInfo.html  struct.KeyLight.html  trait.Layout.html
src/: color.rs  config.rs  error.rs  interface.rs  keyboard.rs  layout.rs  lib.rs  main.rs  reports.rs  test.rs
src/color/: base.rs  buffer.rs
src/keyboard/: builder.rs
src/layout/: key_name.rs  keypress.rs  layout_fr_ch.rs  position.rs
(+62 files in other folders)
