[package]
name = "roccat-vulcan-api-rs"
version = "0.1.1"
authors = ["ChickenStorm <tetras.aigle@yahoo.fr>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ChickenStorm/roccat-vulcan-api-rs"
license = "MIT"
categories = ["api-bindings"]
description  = "Roccat Vulcan keyboard illumination API"
keywords  = ["roccat", "vulcan", "keyboard", "lighting", "api"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.5"

[dev-dependencies]
once_cell = "1.5.2"
