[package]
name = "roccat-vulcan-api-rs"
version = "0.2.1"
authors = ["ChickenStorm <tetras.aigle@yahoo.fr>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ChickenStorm/roccat-vulcan-api-rs"
license = "MIT"
categories = ["hardware-support"]
description  = "Roccat Vulcan keyboard illumination API"
keywords  = ["roccat", "vulcan", "keyboard", "lighting", "api"]

[features]
serde-serialize = ["serde"]
no-keyboard-test = []
default = ["serde-serialize"]

[dependencies]
hidapi = "2.2.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
once_cell = "1.5.2"
version-sync = "0.9.2"
criterion = "0.3.4"
rand = "0.8.4"
approx = "0.5.0"

[[bench]]
name = "bench"
harness = false